@@ -51,6 +51,9 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#1371] 3.3.2 error with cache using griffin
 **Handle GSI login in caching when using Griffin so that zone name can be null.  This will instead cache on host name
 
+*[#1372] continuation not propagated for specific query
+**Added continuation code to specific query
+
 
  
 ==Features==
